# Adaptive_Arithmetic_Algorithm

./: README.md  pyproject.toml
src/adaptive_arith_code/: FrequencyTable.py  Ppm-compressor.py  Ppm_compressor.py  Ppmmodel.py  adaptiveArithmeticCode.py
